--- a/Brainstorming-Round/Team_Disrupt.ipynb
+++ b/Brainstorming-Round/Team_Disrupt.ipynb
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Team Disrupt"
+        "##Iris Classifier Using KNN"
       ],
       "metadata": {
         "id": "qCC21OeixuTC"
